--- a/style/style.css
+++ b/style/style.css
@@ -19,9 +19,14 @@
     background-repeat: no-repeat;
 }
 
-.imagendelogo{
-    margin-left: 570px;
+.imagendelogo {
+    display: grid;
+    place-items: center;
+    margin: auto;
+    display: flex;
+    align-items: center;
     justify-content: center;
+    text-align: center;
 }
 
 
@@ -61,6 +66,11 @@ ul {
     margin-left: 20px;
     text-align: center;
     padding: 20px;
+    transition: transform 1s;
+}
+
+.subrayado:hover {
+    transform: scale(2.1) translateY(-40px);
 }
 
 /* Banner con nombre o título de las páginas */
@@ -71,7 +81,7 @@ ul {
 
 .banner {
     background-image: url("./../Img/Banner2.jpg");
-    background-size: cover;
+    background-size: 100%
     background-repeat: no-repeat;
     background-position: center;
 }
@@ -123,10 +133,13 @@ h3{
     /* align-items: center; */
 }
 
+.img_inicio {
+    border-radius: 5px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
 .parrafos {
-    width: 800px;
+    width: 100%;
     height: 100%;
-    font-family: ;
     /* display: inline-block;*/
     align-items: center;
     position: right;
@@ -162,17 +175,25 @@ h3{
 .productos {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-auto-rows: 1fr;
+    place-content: center;
+    /* grid-auto-rows: 1fr; */
     gap: 24px;
     margin: 20px;
-    padding: 20px;
+    padding: 10px;
 }
 
 .producto {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    place-items: center;
+    /* align-items: center; */
+}
+
+.producto {
+    border-radius: 5px;
+    box-shadow: rgba(240, 46, 170, 0.4) -5px 5px, rgba(240, 46, 170, 0.3) -10px 10px, rgba(240, 46, 170, 0.2) -15px 15px, rgba(240, 46, 170, 0.1) -20px 20px, rgba(240, 46, 170, 0.05) -25px 25px;
+    .scale-up-center{-webkit-animation:scale-up-center .4s cubic-bezier(.39,.575,.565,1.000) both;animation:scale-up-center .4s cubic-bezier(.39,.575,.565,1.000) both}
 }
 
 h2{
@@ -199,6 +220,10 @@ h2{
 
 /* Cuarta página Noticias */
 
+.Notinfo {
+    text-align: center;
+}
+
 .formulario {
     display: flex;
     flex-direction: column;
@@ -213,6 +238,7 @@ h2{
 .boton {
     display: flex;
     flex-direction: column;
+    justify-self: center;
     padding: 2px;
     margin: 3px;
 }
@@ -241,14 +267,195 @@ h2{
     width: 400px;
 }
 
+.map-responsive {
+    overflow: hidden;
+    padding-bottom: 35%;
+    position: relative;
+    height: 0;
+}
+
+.map-responsive iframe {
+    left: 0;
+    top: 0;
+    height: 80%;
+    width: 50%;
+    position: absolute;
+}
+
 
 
 /* Mobile first */
 
-@media screen and (min-width: 320px) {
+@media screen and (max-width: 480px) { 
     .body {
-        background-color: #9F3548;
-    
+        background-color: #AA4139;
+        color: #FF2615;
     }
+    .info {
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+    .cajita {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: auto;
+    }
+
+    .img_inicio {
+        display: flex;
+        text-align: center;
+        width: 100%;
+    }
+    .parrafos {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: auto;
+        position: relative;
+        padding: auto;
+        margin: auto;
+    }
+    .imagendelogo {
+        margin:auto;
+    }
+    .titulo {
+        flex-direction: column;
+        width: 100%;
+    }
+     .info {
+        flex-direction: column;
+     }
+
+    .menu {
+        flex-direction: column;
+        width: auto;
+    }
+
+     .productos {
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(12, 1fr);
+     }
+
+     .menu li a {
+        color: #130C0B;
+     }
+
+     .h1 {
+        color: #FF2615;
+     }
+
+     .h2 {
+        color: #F64133;
+     }
+
+     .h3 {
+        color: #5E2F2B;
+     }
+
+     .info {
+        flex-direction: column;
+        width: auto;
+     }
+     .Notinfo {
+        display: grid;
+        grid-template-columns: 100%;
+        /* text-align: start; */
+        /* width: 100%; */
+     }
+
+     .Subtitulo {
+        flex-direction: column;
+        width: auto;
+     }
+
+     .info-contacto {
+        padding-top: 0rem;
+        padding-inline: 0rem;
+        display: flex;
+        flex-direction: column;
+        gap: 0rem;
+      }
+     
+     .horario {
+        display: grid;
+        grid-template-columns: 1fr;
+     }
+     .comunicate {
+        display: grid;
+        grid-template-columns: 1fr;
+     }
+     .contactanos {
+        display: grid;
+        grid-template-columns: 1fr;
+     }
+
     
+
 }
+
+
+/* Tablet screen */
+
+@media screen and (min-width: 480px) and (max-width: 800px) {
+    .body {
+        background-color: #78286B;
+        color: #E600C2;
+    }
+    .info {
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+    .cajita {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: auto;
+    }
+    .img_inicio {
+        display: flex;
+        width: 60%;
+        align-content: center;
+        
+    }
+    .parrafos {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: auto;
+        position: relative;
+        padding: auto;
+        margin: auto;
+    }
+    .imagendelogo {
+        margin:auto;
+    }
+    .titulo {
+        flex-direction: column;
+        width: 100%;
+    }
+     .info {
+        flex-direction: column;
+     }
+    .menu {
+        flex-direction: column;
+    }
+
+     .productos {
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: repeat(6, 1fr);
+     }
+
+     .menu li a {
+        color: #141313;
+     }
+
+     .h1 {
+        color: #E600C2;
+     }
+
+     .h2 {
+        color: #AA0490;
+     }
+
+     .h3 {
+        color: #462D42;
+     }
+
+}  
