--- a/style/partials/_header.scss
+++ b/style/partials/_header.scss
@@ -1,6 +1,6 @@
 .body {
     .titulo {
-        background-image: url(./../Img/Banner2.jpg);
+        background-image: url(./../Img/banner2.jpg);
         background-size: cover;
         background-repeat: no-repeat;
         .imagendelogo {
@@ -47,8 +47,6 @@
             }
         }
     }
-    
-}
 
 .body {
     background-color: $mainColor;
