--- a/style/partials/_mediaqueries.scss
+++ b/style/partials/_mediaqueries.scss
@@ -1,3 +1,103 @@
+@media screen and (min-width: 480px) and (max-width: 800px) {
+    main {
+        .info {
+            flex-direction: column;
+            grid-template-columns: 1fr;
+            .cajita {
+                display: flex;
+                flex-direction: column;
+                gap: 1rem;
+                }
+                .img_inicio {
+                    width: 60%;
+                    margin: auto; //to center the image//
+                    align-content: center;
+                    display: flex;
+                    }
+                .parrafos {
+                    grid-template-columns: 1fr;
+                    grid-template-rows: auto;
+                    position: relative;
+                    padding: auto;
+                    margin: auto;
+                    display: grid;
+                    }
+         }
+        
+    }
+    .body {
+        background-color: #78286B;
+        color: #E600C2;
+        .imagendelogo {
+            margin:auto;
+        }
+        .titulo {
+            flex-direction: column;
+            width: 100%;
+        }
+    }
+
+    .h1 {
+        color: #E600C2;
+     }
+
+    
+    .productos {
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: repeat(6, 1fr);
+     }
+
+     .h2 {
+        color: #AA0490;
+     }
+
+     .h3 {
+        color: #462D42;
+     }
+    
+     .p {
+        width: 100%;
+        color: #1B0005;
+     }
+
+     .Subtitulo {
+        flex-direction: column;
+        width: auto;
+    }
+
+    .info-contacto {
+        margin: 10px;
+        padding-top: 0rem;
+        padding-inline: 0rem;
+        display: flex;
+        flex-direction: column;
+        gap: 0.5rem;
+        .atencion {
+            display: flex;
+            flex-direction: column;
+            margin: 10px;
+            .horario {
+                display: grid;
+                grid-template-columns: 1fr;
+                .map-responsive {
+                    width: 100%;
+                }
+            }
+            .comunicate {
+                display: grid;
+                grid-template-columns: 1fr; 
+            }
+        }
+
+        .contactanos {
+            margin: 10px;
+            padding: 20px;
+        }
+        
+    }
+}
+
+
 @media screen and (max-width: 480px) {
     .body {
         background-color: #AA4139;
@@ -94,106 +194,5 @@
     .p {
         width: 300px;
         color: #130C0B;
-    }
-
-}
-
-
-@media screen and (min-width: 480px) and (max-width: 800px) {
-    .body {
-        background-color: #78286B;
-        color: #E600C2;
-        .imagendelogo {
-            margin:auto;
-        }
-        .titulo {
-            flex-direction: column;
-            width: 100%;
-        }
-    }
-
-    .h1 {
-        color: #E600C2;
-     }
-
-     .info {
-        flex-direction: column;
-        grid-template-columns: 1fr;
-     }
-
-        
-    .cajita {
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: auto;
-        
-        }
-        .img_inicio {
-            width: 60%;
-            margin: auto; //to center the imagen//
-            align-content: center;
-            display: flex;
-            }
-        .parrafos {
-            grid-template-columns: 1fr;
-            grid-template-rows: auto;
-            position: relative;
-            padding: auto;
-            margin: auto;
-            display: grid;
-            }
-    
-    .productos {
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: repeat(6, 1fr);
-     }
-
-     .h2 {
-        color: #AA0490;
-     }
-
-     .h3 {
-        color: #462D42;
-     }
-    
-     .p {
-        width: 100%;
-        color: #1B0005;
-     }
-
-     .Subtitulo {
-        flex-direction: column;
-        width: auto;
-    }
-
-    .info-contacto {
-        margin: 10px;
-        padding-top: 0rem;
-        padding-inline: 0rem;
-        display: flex;
-        flex-direction: column;
-        gap: 0.5rem;
-        .atencion {
-            display: flex;
-            flex-direction: column;
-            margin: 10px;
-            .horario {
-                display: grid;
-                grid-template-columns: 1fr;
-                .map-responsive {
-                    width: 100%;
-                }
-            }
-            .comunicate {
-                display: grid;
-                grid-template-columns: 1fr; 
-            }
-        }
-
-        .contactanos {
-            margin: 10px;
-            padding: 20px;
-        }
-        
     }
 }
