--- a/style/estilo.css
+++ b/style/estilo.css
@@ -275,6 +275,91 @@ footer .redes {
   line-height: 30px;
 }
 
+@media screen and (min-width: 480px) and (max-width: 800px) {
+  main .info {
+    flex-direction: column;
+    grid-template-columns: 1fr;
+  }
+  main .info .cajita {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+  main .info .img_inicio {
+    width: 60%;
+    margin: auto;
+    align-content: center;
+    display: flex;
+  }
+  main .info .parrafos {
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+    position: relative;
+    padding: auto;
+    margin: auto;
+    display: grid;
+  }
+  .body {
+    background-color: #78286B;
+    color: #E600C2;
+  }
+  .body .imagendelogo {
+    margin: auto;
+  }
+  .body .titulo {
+    flex-direction: column;
+    width: 100%;
+  }
+  .h1 {
+    color: #E600C2;
+  }
+  .productos {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(6, 1fr);
+  }
+  .h2 {
+    color: #AA0490;
+  }
+  .h3 {
+    color: #462D42;
+  }
+  .p {
+    width: 100%;
+    color: #1B0005;
+  }
+  .Subtitulo {
+    flex-direction: column;
+    width: auto;
+  }
+  .info-contacto {
+    margin: 10px;
+    padding-top: 0rem;
+    padding-inline: 0rem;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+  .info-contacto .atencion {
+    display: flex;
+    flex-direction: column;
+    margin: 10px;
+  }
+  .info-contacto .atencion .horario {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+  .info-contacto .atencion .horario .map-responsive {
+    width: 100%;
+  }
+  .info-contacto .atencion .comunicate {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+  .info-contacto .contactanos {
+    margin: 10px;
+    padding: 20px;
+  }
+}
 @media screen and (max-width: 480px) {
   .body {
     background-color: #AA4139;
@@ -361,90 +446,5 @@ footer .redes {
   .p {
     width: 300px;
     color: #130C0B;
-  }
-}
-@media screen and (min-width: 480px) and (max-width: 800px) {
-  .body {
-    background-color: #78286B;
-    color: #E600C2;
-  }
-  .body .imagendelogo {
-    margin: auto;
-  }
-  .body .titulo {
-    flex-direction: column;
-    width: 100%;
-  }
-  .h1 {
-    color: #E600C2;
-  }
-  .info {
-    flex-direction: column;
-    grid-template-columns: 1fr;
-  }
-  .cajita {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: auto;
-  }
-  .img_inicio {
-    width: 60%;
-    margin: auto;
-    align-content: center;
-    display: flex;
-  }
-  .parrafos {
-    grid-template-columns: 1fr;
-    grid-template-rows: auto;
-    position: relative;
-    padding: auto;
-    margin: auto;
-    display: grid;
-  }
-  .productos {
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: repeat(6, 1fr);
-  }
-  .h2 {
-    color: #AA0490;
-  }
-  .h3 {
-    color: #462D42;
-  }
-  .p {
-    width: 100%;
-    color: #1B0005;
-  }
-  .Subtitulo {
-    flex-direction: column;
-    width: auto;
-  }
-  .info-contacto {
-    margin: 10px;
-    padding-top: 0rem;
-    padding-inline: 0rem;
-    display: flex;
-    flex-direction: column;
-    gap: 0.5rem;
-  }
-  .info-contacto .atencion {
-    display: flex;
-    flex-direction: column;
-    margin: 10px;
-  }
-  .info-contacto .atencion .horario {
-    display: grid;
-    grid-template-columns: 1fr;
-  }
-  .info-contacto .atencion .horario .map-responsive {
-    width: 100%;
-  }
-  .info-contacto .atencion .comunicate {
-    display: grid;
-    grid-template-columns: 1fr;
-  }
-  .info-contacto .contactanos {
-    margin: 10px;
-    padding: 20px;
   }
 }/*# sourceMappingURL=estilo.css.map */
