--- a/style/partials/_mediaqueries.scss
+++ b/style/partials/_mediaqueries.scss
@@ -25,7 +25,7 @@
          }
         
     }
-    .body {
+    body {
         background-color: #78286B;
         color: #E600C2;
         .imagendelogo {
