--- a/style/estilo.css
+++ b/style/estilo.css
@@ -299,14 +299,14 @@ footer .redes {
     margin: auto;
     display: grid;
   }
-  .body {
+  body {
     background-color: #78286B;
     color: #E600C2;
   }
-  .body .imagendelogo {
+  body .imagendelogo {
     margin: auto;
   }
-  .body .titulo {
+  body .titulo {
     flex-direction: column;
     width: 100%;
   }
