--- a/style/partials/_mediaqueries.scss
+++ b/style/partials/_mediaqueries.scss
@@ -1,5 +1,5 @@
 @media screen and (min-width: 480px) and (max-width: 800px) {
-    body {
+    .body {
         background-color: #78286B;
         color: #E600C2;
         .imagendelogo {
