--- a/style/partials/_footer.scss
+++ b/style/partials/_footer.scss
@@ -7,6 +7,7 @@ footer {
         display: flex;
         justify-content: center;
         align-content: space-between;
+        text-align: center;
         font-size: 35px;
      }  
 }
