--- a/style/estilo.css
+++ b/style/estilo.css
@@ -242,7 +242,7 @@ footer .redes {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 20px;
   margin: 15px;
-  width: 400px;
+  width: 335px;
 }
 .info-contacto .atencion .map-responsive {
   display: flex;
@@ -349,7 +349,7 @@ footer .redes {
     grid-template-columns: 1fr;
   }
   .info-contacto .atencion .horario .map-responsive {
-    width: 100%;
+    width: 95%;
   }
   .info-contacto .atencion .comunicate {
     display: grid;
@@ -432,7 +432,9 @@ footer .redes {
     grid-template-columns: 1fr;
   }
   .info-contacto .atencion .horario .map-responsive {
-    width: 100%;
+    display: flex;
+    flex-direction: column;
+    width: 90%;
   }
   .info-contacto .atencion .comunicate {
     display: grid;
